# dropbear

./: .env-example  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Package.swift  README.md  build.gradle.kts  gleam.toml  gradle.properties  manifest.toml  navigation.html  settings.gradle.kts  tsconfig.json  typedoc.json
.cargo/: .config.toml  config.toml
.github/workflows/: build_fatty.yaml  create_executable.yaml  docs.yaml  docs_deploy.yaml  dokka_docs.yaml  release-magna-carta.yaml  release-magna-carta.yaml.yml  swift_doc.yaml
.run/: Build eucalyptus-editor.run.xml  Build eucalyptus_core cdylib.run.xml  Build gradle.run.xml  Build literally everything.run.xml  Clean literally everything.run.xml  Publish to GitHub Packages.run.xml  Publish to Maven Local.run.xml  Run eucalyptus-editor.run.xml  eucalyptus-editor.run.xml  fatJar.run.xml  generateJNIHeaders.run.xml  generateJniHeaders.run.xml
Sources/dropbear/: DropbearEngine.swift  Entity.swift  Input.swift  Scene.swift  dropbear.swift  entity.swift  example.swift  ffi.swift  input.swift  math.swift  registry.swift  scene.swift
Sources/dropbear_macro/: macros.swift
Tests/dropbearTests/: dropbearTests.swift
assets/: highlight.css  navigation.js  search.js
classes/: dropbear.Camera.html  dropbear.Entity.html  dropbear.EntityProperties.html  dropbear.Input.html  dropbear.Light.html  dropbear.Quaternion.html  dropbear.Scene.html  dropbear.Transform.html  dropbear.Vector3.html
deny_query_one_mut_lint/: Cargo.toml  README.md
docs/: README.md  _sidebar.md  hierarchy.html  index.html  math.md  notes.md  properties.md  todo.md  transform.md  utils.md
docs/articles/: debugging.md  different_variable_types.md  dropbear.decl.md
docs/assets/: navigation.js  search.js
docs/classes/: Entity.html  EntityProperties.html  Quaternion.html  Transform.html  Vector3.html  dropbear.Camera.html  dropbear.Entity.html  dropbear.EntityProperties.html  dropbear.Input.html  dropbear.Light.html  dropbear.Quaternion.html  dropbear.Scene.html  dropbear.Transform.html  dropbear.Vector3.html
docs/documents/: page.html
docs/functions/: createTransformFromData.html  dropbear.createTransformFromData.html  dropbear.end.html  dropbear.start.html
docs/input/: keyboard.md  mouse.md
docs/interfaces/: EntityData.html  InputData.html  ScriptEntityData.html  TransformData.html  dropbear.CameraData.html  dropbear.EntityData.html  dropbear.InputData.html  dropbear.LightData.html  dropbear.RawSceneData.html  dropbear.ScriptEntityData.html  dropbear.TransformData.html
documents/: page.html
dropbear/: package-list
dropbear-derive/: Cargo.toml  README.md
dropbear-engine/: Cargo.toml  build.rs
dropbear-engine/resources/shaders/: shader.wgsl
dropbear-engine/src/: asset.rs  attenuation.rs  buffer.rs  camera.rs  colour.rs  egui_renderer.rs  entity.rs  future.rs  graphics.rs  graveyard.rs  input.rs  lib.rs  lighting.rs  model.rs  panic.rs  resources.rs  scene.rs  shader.rs  utils.rs
dropbear-engine/src/procedural/: mod.rs  plane.rs
dropbear-engine/src/resources/shaders/: shader.wgsl
dropbear-engine/src/starter/: mod.rs  plane.rs
dropbear-gradle-plugin/: build.gradle.kts
dropbear-shader/: build.rs
dropbear-traits/: Cargo.toml  README.md
dropbear_future-queue/: Cargo.toml  README.md
dropbear_future-queue/src/: lib.rs
eucalyptus/: Cargo.toml  README.md  build.rs
eucalyptus-core/: Cargo.toml  README.md  build.rs
eucalyptus-core/src/: camera.rs  component.rs  config.rs  dropbear.rs  hierarchy.rs  input.rs  lib.rs  logging.rs  model_ext.rs  ptr.rs  result.rs  runtime.rs  scene.rs  scripting.rs  socket.rs  spawn.rs  states.rs  utils.rs  window.rs
eucalyptus-core/src/scripting/: build.rs  dropbear.rs  entity.rs  error.rs  input.rs  java.rs  jni.rs  kmp.rs  lighting.rs  math.rs  mod.rs  native.rs
eucalyptus-core/src/scripting/jni/: error.rs  exception.rs  exports.rs  hotreload.rs  utils.rs
eucalyptus-core/src/scripting/native/: exports.rs  sig.rs  types.rs
eucalyptus-core/src/swift/: ffi.h  ffi.rs
eucalyptus-editor/: Cargo.toml  README.md  build.rs
eucalyptus-editor/src/: build.rs  camera.rs  debug.rs  graphics.rs  lib.rs  main.rs  menu.rs  plugin.rs  signal.rs  spawn.rs  stats.rs  utils.rs
eucalyptus-editor/src/editor/: component.rs  console_error.rs  dock.rs  input.rs  mod.rs  repl.rs  scene.rs
eucalyptus-sdk/: Cargo.toml  README.md
eucalyptus-sdk/src/: lib.rs
eucalyptus/src/: camera.rs  camera1.rs  dropbear.ts  editor.rs  jot_down_some_ideas.rs  jot_down_some_ideas.txt  lib.rs  light.wgsl  logging.rs  main.rs  menu.rs  scene1.rs  scene2.rs  shader.wgsl  states.rs  template.rhai  template.ts  utils.rs
eucalyptus/src/editor/: component.rs  dock.rs  input.rs  mod.rs  scene.rs
eucalyptus/src/ignore/: jot_down_some_ideas.rs
eucalyptus/src/scripting/: camera.rs  entity.rs  input.rs  math.rs  mod.rs
eucalyptus/src/scripts/: convert_model_to_image.py
eucalyptus/src/typescript/: helper.ts
functions/: dropbear.createTransformFromData.html  dropbear.end.html  dropbear.start.html
gleek/: Cargo.toml  README.md  build.rs
gleek-tests/: Cargo.toml  build.rs
gleek_proc_macro/: Cargo.toml  README.md
gleek_proc_macro/src/: lib.rs
headers/: dropbear.h
interfaces/: dropbear.CameraData.html  dropbear.EntityData.html  dropbear.InputData.html  dropbear.LightData.html  dropbear.RawSceneData.html  dropbear.ScriptEntityData.html  dropbear.TransformData.html
magna-carta/: Cargo.toml  README.md
magna-carta-plugin/: build.gradle.kts
magna-carta/src/: lib.rs  main.rs
magna-carta/src/generator/: jvm.rs  mod.rs  native.rs
modules/: dropbear.html
redback/: Cargo.toml  README.md
redback-runtime/: Cargo.toml
resources/: Build.swift  cube.glb  dropbear.ts  template.ts
scripts/: gen_docs.bat  gen_docs.sh  pages.json  sourceset_dependencies.js
src/: dropbear.def  dropbear.gleam  entity.gleam  example.gleam  input.gleam  math.gleam  memory.gleam  memory.js  types.gleam
types/: dropbear.KeyCode.html
variables/: dropbear.Keys.html  dropbear.dbMath.html  dropbear.input.html  dropbear.scene.html
(+180 files in other folders)
