[workspace]
package.version = "0.1.2"
package.edition = "2024"
package.license = "GPL-3.0-or-later"
package.repository = "https://github.com/4tkbytes/dropbear-engine"
package.readme = "README.md"

resolver = "3"
members = ["dropbear-engine", "eucalyptus", "redback-runtime"]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
app_dirs2 = "2.5"
bincode = { version = "2.0", features = ["serde"] }
bytemuck = { version = "1.23", features = ["derive"] }
chrono = "0.4"
clap = "4.5"
dropbear-engine = { path = "dropbear-engine" }
egui = "0.32"
egui-toast-fork = "0.18"
egui-wgpu = { version = "0.32", features = ["winit"] }
egui-winit = "0.32"
egui_dnd = "0.13"
egui_dock-fork = { version = "0.17", features = ["serde"] }
egui_extras = { version = "0.32", features = ["all_loaders"] }
env_logger = "0.11"
futures = "0.3"
gilrs = "0.11"
git2 = "0.20"
glam = { version = "0.30", features = ["serde"] }
hecs = { version = "0.10", features = ["serde"] }
log = "0.4"
log-once = "0.4"
model_to_image = "0.1"
num-traits = "0.2"
once_cell = "1.21"
open = "5"
parking_lot = {version = "0.12", features = ["deadlock_detection"] }
pollster = "0.4"
rfd = "0.15.4"
rhai = "1.22"
ron = "0.10.1"
russimp = { version = "3.2", features = ["prebuilt"] }
serde = { version = "1.0.219", features = ["derive"] }
spin_sleep = "1.3"
tokio = { version = "1", features = ["full"] }
transform-gizmo-egui = { git = "https://github.com/4tkbytes/transform-gizmo"}
wgpu = "25"
winit = { version = "0.30", features = [] }
zip = "0.6"
walkdir = "2.3"

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

# [patch.crates-io]
# russimp-sys = { git = "https://github.com/4tkbytes/russimp-sys" }

[profile.dev]
opt-level = 0
debug = true
codegen-units = 16
incremental = true
lto = false

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false
