[workspace]
package.version = "0.1.2"
package.edition = "2024"
package.license-file = "LICENSE.md"
package.repository = "https://github.com/4tkbytes/dropbear-engine"
package.readme = "README.md"

resolver = "3"
members = ["dropbear-engine", "eucalyptus-core", "eucalyptus-editor", "redback-runtime"]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
app_dirs2 = "2.5"
arboard = "3.6"
bincode = { version = "2.0", features = ["serde"] }
bytemuck = { version = "1.23", features = ["derive"] }
chrono = "0.4"
clap = "4.5"
colored = "3.0"
dropbear-engine = { path = "dropbear-engine" }
egui = "0.32"
egui-toast-fork = "0.18"
egui_wgpu_backend = { version = "0.35", git = "https://github.com/hasenbanck/egui_wgpu_backend"}
egui_winit_platform = { version = "0.27", git = "https://github.com/hasenbanck/egui_winit_platform" }
egui_dnd = "0.13"
egui_dock-fork = { version = "0.17", features = ["serde"] }
egui_extras = { version = "0.32", features = ["all_loaders"] }
env_logger = "0.11"
futures = "0.3"
gilrs = "0.11"
git2 = { version = "0.20", features = ["vendored-openssl"] }
glam = { version = "0.30", features = ["serde"] }
hecs = { version = "0.10", features = ["serde"] }
lazy_static = "1.5"
log = "0.4"
log-once = "0.4"
model_to_image = "0.1.1"
once_cell = "1.21"
open = "5"
parking_lot = {version = "0.12", features = ["deadlock_detection"] }
rfd = "0.15.4"
ron = "0.11"
russimp-ng = { version = "3.2", features = ["static-link"] }
rustyscript = { version = "0.12" }
serde = { version = "1.0.219", features = ["derive"] }
spin_sleep = "1.3"
transform-gizmo-egui = { git = "https://github.com/4tkbytes/transform-gizmo"}
tokio = { version = "1", features = ["full"] }
wgpu = "26"
winit = { version = "0.30", features = [] }
zip = "4.6"
walkdir = "2.3"
wasmtime = "36.0"

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[profile.dev]
opt-level = 0
debug = true
codegen-units = 16
incremental = true
lto = false
# it takes way too long to exit out
panic = "abort"

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false
