[package]
name = "dropbear-engine"
description = "A game engine made by 4tkbytes. Thats really it..."

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
egui_wgpu_backend.workspace = true
egui_winit_platform.workspace = true
egui.workspace = true
env_logger.workspace = true
futures.workspace = true
gilrs.workspace = true
glam.workspace = true
log.workspace = true
log-once.workspace = true
russimp-ng.workspace = true
pollster.workspace = true
serde.workspace = true
spin_sleep.workspace = true
wgpu.workspace = true
winit.workspace = true
hecs.workspace = true


[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
