[package]
name = "dropbear-engine"
description = "A game engine made by 4tkbytes. Thats really it..."

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app_dirs2.workspace = true
bytemuck.workspace = true
chrono.workspace = true
colored.workspace = true
egui_wgpu_backend.workspace = true
egui_winit_platform.workspace = true
egui.workspace = true
env_logger.workspace = true
futures.workspace = true
gilrs.workspace = true
glam.workspace = true
log.workspace = true
log-once.workspace = true
#rfd.workspace = true
russimp-ng.workspace = true
pollster.workspace = true
serde.workspace = true
spin_sleep.workspace = true
wgpu.workspace = true
winit.workspace = true
hecs.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
lazy_static.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd.workspace = true
arboard.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
