[package]
name = "dropbear-engine"
description = "A game engine made by 4tkbytes. Thats really it..."

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app_dirs2.workspace = true
bytemuck.workspace = true
chrono.workspace = true
colored.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui.workspace = true
env_logger.workspace = true
futures.workspace = true
gilrs.workspace = true
glam.workspace = true
log.workspace = true
log-once.workspace = true
serde.workspace = true
spin_sleep.workspace = true
wgpu.workspace = true
winit.workspace = true
hecs.workspace = true
parking_lot.workspace = true
lazy_static.workspace = true
gltf.workspace = true
rayon.workspace = true
tokio.workspace = true
backtrace.workspace = true
os_info.workspace = true
rustc_version_runtime.workspace = true
ahash = "0.8.12"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd.workspace = true
arboard.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
