[package]
name = "dropbear_future-queue"

version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
description = "A queue for polling futures in a single threaded context"

[dependencies]
ahash = "0.8.12"
parking_lot = "0.12.4"
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread"] }
