[package]
name = "dropbear_future-queue"

version = "0.1.1"
edition.workspace = true
license = "MIT"
repository.workspace = true
readme = "README.md"
description = "A queue for polling futures in a synchronous context"

[dependencies]
ahash = "0.8"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread"] }
anyhow = "1.0.100"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread"] }
