[package]
name = "eucalyptus-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
dropbear-engine.workspace = true
egui-toast-fork.workspace = true
egui.workspace = true
egui_dock-fork.workspace = true
glam.workspace = true
hecs.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
ron.workspace = true
serde.workspace = true
winit.workspace = true
tokio.workspace = true
rayon.workspace = true
jni.workspace = true
crossbeam-channel = "0.5.15"
libloading = "0.8.9"
app_dirs2.workspace = true
sha2 = "0.10"

[features]
# editor only stuff
editor = ["jvm"]
jvm = []

# [target.'cfg(not(target_os = "android"))'.dependencies]
# rfd.workspace = true

[build-dependencies]
anyhow = "1.0"
app_dirs2 = "2.5"
