[package]
name = "eucalyptus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
dropbear-engine.workspace = true
egui-toast-fork.workspace = true
egui.workspace = true
egui_dock-fork.workspace = true
glam.workspace = true
hecs.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
ron.workspace = true
serde.workspace = true
winit.workspace = true
tokio.workspace = true
rayon.workspace = true
jni.workspace = true
sha2.workspace = true
libloading.workspace = true
crossbeam-channel.workspace = true
app_dirs2.workspace = true
log-once.workspace = true

[features]
# editor only stuff
editor = ["jvm"]
jvm = []

# [target.'cfg(not(target_os = "android"))'.dependencies]
# rfd.workspace = true

[build-dependencies]
anyhow = "1.0"
app_dirs2 = "2.5"
