[package]
name = "eucalyptus-sdk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
eucalyptus-core = { path = "../eucalyptus-core" }
eucalyptus-editor = { path = "../eucalyptus-editor" }
dropbear-engine = { path = "../dropbear-engine" }