[package]
name = "eucalyptus"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A visual game editor for the dropbear game engine"
repository = "https://github.com/4tkbytes/dropbear-engine"
readme = "README.md"
default-run = "eucalyptus"
exclude = ["resources"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dropbear-engine = { path = "../dropbear-engine" }
# dropbear-engine = "0.1.2"
rfd = "0.15.4"
git2 = "0.20.2"
anyhow = "1.0"
ron = "0.10.1"
chrono = "0.4.41"
egui-toast-fork = "0.18.0"
egui_dock-fork = { version = "0.17", features = ["serde"] }
egui_dnd = "0.13"
once_cell = "1.21"
app_dirs2 = "2.5"
transform-gizmo-egui = "0.6"

[dependencies.rhai]
version = "1.22"
features = ["std"]

[build-dependencies]
anyhow = "1.0"
app_dirs2 = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "4.3"
