[package]
name = "eucalyptus"
description = "A visual game editor for the dropbear game engine"
default-run = "eucalyptus"
exclude = ["resources"]

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app_dirs2.workspace = true
async-trait.workspace = true
chrono.workspace = true
dropbear-engine.workspace = true
egui-toast-fork.workspace = true
egui.workspace = true
egui_dnd.workspace = true
egui_dock-fork.workspace = true
egui_extras.workspace = true
gilrs.workspace = true
git2.workspace = true
glam.workspace = true
hecs.workspace = true
log.workspace = true
model_to_image.workspace = true
# nalgebra.workspace = true
once_cell.workspace = true
rfd.workspace = true
rhai.workspace = true
ron.workspace = true
serde.workspace = true
tokio.workspace = true
transform-gizmo-egui.workspace = true
wgpu.workspace = true
winit.workspace = true

[build-dependencies]
anyhow = "1.0"
app_dirs2 = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "4.3"
