[package]
name = "gleek_proc_macro"
edition.workspace = true
description = "A way to generate Gleam stubs for your rust code (assuming its compiled to JavaScript)"
version = "0.0.1"
license = "MIT"
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
