[package]
name = "magna-carta"
version.workspace = true
edition.workspace = true
license = "MIT"
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-kotlin.workspace = true
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"