[package]
name = "magna-carta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-kotlin.workspace = true
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"